--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Este es el primer documento de cambio</p>
+    <p>Este es el segundo cambio en el documento</p>
 </body>
 </html>
